# document_extractor

./: .gitattributes  README.md  install.sh  pyproject.toml
datasets/preprocessed/: test.json  train.json  val.json
datasets/raw/test/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json
datasets/raw/train/bank statements/: 001.json  002.json  003.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  019.json  020.json
datasets/raw/train/invoices/: 001.json  002.json  003.json  004.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  020.json
datasets/raw/train/payslips/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  009.json  010.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  021.json  023.json
datasets/raw/train/profit&losses/: 001.json  002.json  003.json  004.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  020.json
datasets/raw/train/utility/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  011.json  012.json  013.json  014.json  015.json  016.json  017.json  018.json  019.json  020.json  022.json  024.json
datasets/raw/val/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json
document_extractor/: dataset.py  eval.py  utils.py
noteboks/: 01_prepare_datasets.ipynb  03_evaluate_Qwen2-VL.ipynb
notebooks/: 02_finetune_Qwen2-VL.ipynb  03_evaluate_Qwen2-VL.ipynb
tests/: test_dataset.py  test_eval.py  test_utils.py
