[tool.poetry]
name = "document-extractor"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = {git = "https://github.com/huggingface/transformers.git"}
trl = {git = "https://github.com/huggingface/trl.git"}
datasets = "^3.2.0"
bitsandbytes = "^0.45.1"
peft = "^0.14.0"
qwen-vl-utils = "^0.0.10"
accelerate = "^1.3.0"
pydantic = "^2.10.6"
tensorboard = "^2.18.0"

# ===========================================
# =========== START OF TORCH PART ===========
torch       = { version = "^2.6", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }
torchvision = { version = "^0.21", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }

[tool.poetry.group.cuda]
optional = true

# https://github.com/pytorch/pytorch/blob/main/RELEASE.md#release-compatibility-matrix
[tool.poetry.group.cuda.dependencies]
    torch       = { version = "^2.6", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }
    torchvision = { version = "^0.21", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }
    flash-attn = { version = "^2.7.4.post1", markers = "extra=='cuda' and extra!='cpu'" }

[tool.poetry.extras]
    cpu  = ["torch", "torchvision"]
    cuda = ["torch", "torchvision", "flash-attn"]

[[tool.poetry.source]]
    name     = "pytorch-cuda"
    priority = "explicit"
    url      = "https://download.pytorch.org/whl/cu126"

[[tool.poetry.source]]
    name     = "pytorch-cpu"
    priority = "explicit"
    url      = "https://download.pytorch.org/whl/cpu"

# ============ END OF TORCH PART ============
# ===========================================

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
mypy = "^1.15.0"
pytest = "^8.3.4"
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"